# learnopengl

./: .dir-locals.el  CMakeLists.txt  README.md
include/glad/: glad.h
src/: 01-hello-window.c  02-hello-triangle.c  glad.c
